<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".Activity.MainScreenActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin_3dp"
            android:background="@color/gray_light_light"
            android:gravity="center"
            android:orientation="horizontal">


            <com.rupvm.covid19india.CustomView.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/covid_19"
                android:textSize="@dimen/textSizeNormal"
                android:textStyle="bold" />

            <com.rupvm.covid19india.CustomView.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/country_name"
                android:textColor="@color/orange_700"
                android:textSize="@dimen/textSizeNormal"
                android:textStyle="bold" />


        </LinearLayout>

        <ImageView
            android:id="@+id/refreshIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:src="@drawable/baseline_refresh_black_24" />

        <ImageView
            android:id="@+id/notificationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginRight="@dimen/margin_10dp"
            android:src="@drawable/baseline_notifications_black_24" />
    </FrameLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:visibility="visible">

        <com.rupvm.covid19india.CustomView.MyTextView
            android:id="@+id/lastUpdateTimeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/editTextCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="8dp">

            <com.rupvm.covid19india.CustomView.MyEditText
                android:id="@+id/editSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:hint="@string/search_hint"
                android:imeOptions="actionDone"
                android:singleLine="true" />
        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <include layout="@layout/internet_layout" />

</LinearLayout>