<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_5dp"
    android:id="@+id/stateCardView"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="8dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5dp"
        android:orientation="vertical">

        <com.rupvm.covid19india.CustomView.MyTextView
            android:id="@+id/stateNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_margin="@dimen/margin_5dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSizeNormal"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2.5"
                android:gravity="center"
                android:orientation="vertical">

                <com.rupvm.covid19india.CustomView.MyTextView
                    android:id="@+id/deltaConfirmText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textSize" />

                <com.rupvm.covid19india.CustomView.MyTextView
                    android:id="@+id/confirmedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textSizeNormal" />


                <com.rupvm.covid19india.CustomView.MyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/confirmed_string"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2.5"
                android:gravity="center"
                android:orientation="vertical">


                <com.rupvm.covid19india.CustomView.MyTextView
                    android:id="@+id/deltaActiveText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textSize" />

                <com.rupvm.covid19india.CustomView.MyTextView
                    android:id="@+id/activeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textSizeNormal" />

                <com.rupvm.covid19india.CustomView.MyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/active_string"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2.5"
                android:gravity="center"
                android:orientation="vertical">


                <com.rupvm.covid19india.CustomView.MyTextView
                    android:id="@+id/deltaRecoveredText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textSize" />

                <com.rupvm.covid19india.CustomView.MyTextView
                    android:id="@+id/recoveredText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textSizeNormal" />


                <com.rupvm.covid19india.CustomView.MyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/recoveredString"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2.5"
                android:gravity="center"
                android:orientation="vertical">


                <com.rupvm.covid19india.CustomView.MyTextView
                    android:id="@+id/deltaDeceasedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textSize" />

                <com.rupvm.covid19india.CustomView.MyTextView
                    android:id="@+id/deceasedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textSizeNormal" />


                <com.rupvm.covid19india.CustomView.MyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/deceasedString"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>

